fixed bug where hover was flickering because of nav text over SVG

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,13 +11,15 @@
 .accent {
   color: #f9a8d4;
 }
+.hovered {
+  transform: scale(1.4);
+  fill: #ff0;
+}
+
 /* .splotch {
   transition: all 0.2s ease-in-out;
 }
 
-.splotch:hover {
-  transform: scale(1.4);
-}
 
 .rotate {
   animation: rotation 1200s infinite linear;
